--- a/DangersAndDungeons/DangersAndDungeons/DangersAndDungeons.csproj
+++ b/DangersAndDungeons/DangersAndDungeons/DangersAndDungeons.csproj
@@ -54,6 +54,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Saves.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Saves.xsd</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -96,6 +101,17 @@
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Saves.xsc">
+      <DependentUpon>Saves.xsd</DependentUpon>
+    </None>
+    <None Include="Saves.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>Saves.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="Saves.xss">
+      <DependentUpon>Saves.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
